Update GitHub URLs with correct username

--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/YOUR_USERNAME/ring-mcp.git"
+    "url": "git+https://github.com/drgost1/ring-mcp.git"
   },
-  "homepage": "https://github.com/YOUR_USERNAME/ring-mcp#readme",
+  "homepage": "https://github.com/drgost1/ring-mcp#readme",
   "bugs": {
-    "url": "https://github.com/YOUR_USERNAME/ring-mcp/issues"
+    "url": "https://github.com/drgost1/ring-mcp/issues"
   },
   "engines": {
     "node": ">=18.0.0"
